[tool.poetry]
name = "combo_publisher"
version = "0.1.0"
description = ""
authors = ["Igor Iakovlev <iu.yakovlev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.34.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
flask = "^3.0.3"
redis = "^5.0.3"
psycopg2-binary = "^2.9.9"
aiogram = "^3.7.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
requests = "^2.32.3"
pybit = "^5.8.0"
schedule = "^1.2.2"
telebot = "^0.0.5"
pymongo = "^4.10.1"
pyTelegramBotAPI = "^4.23.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
